crates/oac/src/snapshots/oac__parser__tests__parser_char_literals_ast.snap
---
source: crates/oac/src/parser.rs
assertion_line: 2340
expression: ast
snapshot_kind: text
---
{
  "imports": [],
  "type_definitions": [],
  "top_level_functions": [
    {
      "name": "main",
      "parameters": [],
      "body": [
        {
          "Assign": {
            "variable": "ch",
            "value": {
              "Call": [
                "Char__from_code",
                [
                  {
                    "Literal": {
                      "Int": 120
                    }
                  }
                ]
              ]
            }
          }
        },
        {
          "Assign": {
            "variable": "nl",
            "value": {
              "Call": [
                "Char__from_code",
                [
                  {
                    "Literal": {
                      "Int": 10
                    }
                  }
                ]
              ]
            }
          }
        },
        {
          "Return": {
            "expr": {
              "Literal": {
                "Int": 0
              }
            }
          }
        }
      ],
      "return_type": "I32",
      "is_comptime": false,
      "is_extern": false
    }
  ],
  "trait_declarations": [],
  "impl_declarations": [],
  "tests": [],
  "invariants": [],
  "generic_definitions": [],
  "generic_specializations": [],
  "comptime_applies": []
}
