crates/oac/src/snapshots/oac__parser__tests__parser_function_preconditions_ast.snap
---
source: crates/oac/src/parser.rs
expression: ast
snapshot_kind: text
---
{
  "imports": [],
  "type_definitions": [],
  "top_level_functions": [
    {
      "name": "clamp",
      "parameters": [
        {
          "name": "v",
          "ty": "I32"
        }
      ],
      "preconditions": [
        {
          "BinOp": [
            "Ge",
            {
              "Variable": "v"
            },
            {
              "Literal": {
                "Int": 0
              }
            }
          ]
        },
        {
          "BinOp": [
            "Le",
            {
              "Variable": "v"
            },
            {
              "Literal": {
                "Int": 10
              }
            }
          ]
        }
      ],
      "body": [
        {
          "Return": {
            "expr": {
              "Variable": "v"
            }
          }
        }
      ],
      "return_type": "I32",
      "is_comptime": false,
      "is_extern": false
    }
  ],
  "trait_declarations": [],
  "impl_declarations": [],
  "tests": [],
  "invariants": [],
  "generic_definitions": [],
  "generic_specializations": [],
  "comptime_applies": []
}
